Fixed footer overlapping issue in contact page

--- a/frontend/src/containers/Contact/Contact.scss
+++ b/frontend/src/containers/Contact/Contact.scss
@@ -29,7 +29,7 @@
   height: 100vh;
   padding: 10rem 4rem 4rem 4rem;
   width: 80%;
-  min-height: 760px;
+  min-height: 990px;
   align-self: center;
   gap: 2rem;
   position: relative;
@@ -39,8 +39,16 @@
     width: 90%;
   }
 
+  @media screen and (max-width: 1250px) {
+    min-height: 1100px;
+  }
+
   @media screen and (max-width: 1100px) {
     width: 100%;
+  }
+
+  @media screen and (max-width: 900px) {
+    min-height: 1200px;
   }
 
   @media screen and (max-width: 800px) {
